[package]
name = "casper-db-utils"
version = "0.1.0-dev+casper.node.1.4.15"
authors = ["George Pisaltu <georgep@casperlabs.io>"]
edition = "2021"
description = "Utilities for working with databases of the Casper blockchain."
documentation = "https://docs.rs/casper-db-utils"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-network/casper-db-utils"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1"
bincode = "1"
casper-execution-engine = "*"
casper-storage = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-types = "*"
clap = { version = "3", features = ["cargo"] }
futures = "0.3.21"
lmdb-rkv = "0.14"
log = "0.4.17"
once_cell = "1"
reqwest = { version = "0.12.4", features = ["stream"] }
ringbuf = "0.2.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.0"
tar = "0.4.38"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
zstd = "0.13.1"

[dev-dependencies]
once_cell = "1"
rand = "0.8.5"
tempfile = "3"

[build-dependencies]
cargo-lock = { version = "9.0", default-features = false }

[patch.crates-io]
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }

